<resources>
	<!-- Existing strings -->
	<string name="connect_to_bluetooth">Connect to Bluetooth</string>
	<string name="disconnect">Disconnect</string>
	<string name="change_wi_fi_network">Change WiFi Network</string>
	<string name="messages_will_appear_here">Messages will appear here</string>
	<!-- New strings -->
	<string name="enter_ssid">Enter WiFi Network Name (SSID)</string>
	<string name="enter_password">Enter WiFi Password</string>
	<string name="send_wi_fi_credentials">Configure WiFi</string>
    <string name="app_name">ETH2WiFi</string>
	<string name="name_of_the_device">wyze_hub</string>
</resources>
