<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_bluetooth" />

    <Button
        android:id="@+id/wifiConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_wi_fi_network" />

    <TextView
        android:id="@+id/messagesView"
        android:layout_width="match_parent"
        android:layout_height="596dp"
        android:scrollbars="vertical"
        android:text="@string/messages_will_appear_here" />
</LinearLayout>
